src/main/resources/scss/course/components/_outline.scss
%outline {
	ul {
		position: relative;
		&, ul {
			list-style: none;
			margin-left: 0;
		}
	}

	li label {
		padding: 0 3em;

		font: {
			style: normal;
			weight: 600;
			size: 0.9em;
			family: $body-font-family;
		}

		line-height: 3.5em;

		color: #a1a1a1;
		box-shadow: inset 0 -1px 0 0 #eaeaea;
		z-index: 2;
		position: relative;

		&::after {
			//@extend %icon-topic; doesn't work, direct extend. (see bottom of file)
			content: '';
			position: absolute;
			left: 18px;
			top: 50%;
			margin-top: -10px;
			height: 20px;
			width: 18px;
		}
	}

	li ul {margin-left: 0;}

	li {
		position: relative; // to get the chevron on the anchor below to line up.
	}

	li a {
		display: block;
		overflow: hidden;
		// text-overflow: ellipsis;
		// white-space: nowrap;
		max-height: 4em;
		color: $tertiary-grey;
		&[href] {
			color: $secondary-grey;
			padding-right: 1em; // leave room for the chevron
			&::after {
				@extend %chevron-right;
				position: absolute;
				font-size: inherit;
				right: .5em;
				top: 50%;
				transform: translateY(-44%); // 50% pulls it up a bit too high relative to the text.
			}
		}
	}

	.over {
		background: #f0f0f0;
		box-shadow: inset 3px 0 0 0 #cfcfcf;
	}

	.active {
		background: #3fb3f6;
		box-shadow: inset 3px 0 0 0 #107eed;
		a[href] {
			color: #ffffff;
			font-weight: 600;
		}
	}

	li:first-of-type {
		& > h1 {
			margin: 0;
		}
		& > h3 {
			margin-top: 0;
		}
	}

	li:not(:first-of-type) > h1::before {
		content: '';
		position: absolute;
		left: 0;
		right: 0;
		top: 0;
		height: 0.167em;
		background: #e7e8ed;
		box-shadow: inset 0 -1px 0 0 #dddddd;
	}

	li > h1 {
		margin: 1.875rem 0 0;
		color: $secondary-grey;
		position: relative;
		font: {
			style: normal;
			weight: 100;
			size: 1.5em;
		}
		text-transform: none;
		padding: 0.8125rem 0.42em 0.5625rem;
	}

	li > h3 {
		text-transform: uppercase;
		font: {
			style: normal;
			weight: 400;
			size: 0.6em;
			family: $body-font-family;
		}

		padding: 0.3125rem 1.25rem 0.25rem;
		background: #f4f4f4 !important;
		font-weight: 600;
		box-shadow: inset 0 1px 0 0 #efefef, inset 0 -1px 0 0 #efefef;
		margin-bottom: 0.5em;
		margin-top: 3.5em;
		color: $secondary-grey;
	}

	li > div {
		font: {
			style: normal;
			weight: 400;
			size: 0.9rem;
		}
		padding: 0.5625rem 0.3125rem 0.5rem 1.25rem;
	}
}

.course-outline {
	@extend %outline;

	li label::after {
		@extend %icon-topic;
	}


	& > .head {
		@extend %content-header;
	}
}

